tests/neg/i21652.scala
def k: [A] => (=> A) => A = // error
  [A] => a => a
